--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div id="board" class="board"></div>
         <p id="message">Tura: X</p>
         <button id="resetBtn">Reset</button>
-        <h1>Autor: Damian Pham Quoc </h1>
+        <h1>Autor: Julia Wyszyńska </h1>
     </div>
 
     <script src="script.js"></script>
